<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreenFragment">


    <ImageView
        android:id="@+id/menucirclewithbuttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Main_Menu"
        android:src="@drawable/menucirclewithbuttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/profile_Button"
        android:layout_width="260dp"
        android:layout_height="65dp"
        android:layout_marginBottom="144dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Profile_Button"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/menucirclewithbuttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/profile_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dejavuserifcondensedbold"
        android:text="@string/Profile"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/menucirclewithbuttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menucirclewithbuttons"
        app:layout_constraintVertical_bias="0.782" />

    <Button
        android:id="@+id/friends_Button"
        android:layout_width="294dp"
        android:layout_height="56dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Friends_Button"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/menucirclewithbuttons"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/friends_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dejavuserifcondensedbold"
        android:text="@string/Friends"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/menucirclewithbuttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menucirclewithbuttons"
        app:layout_constraintVertical_bias="0.676" />

    <Button
        android:id="@+id/tutorial_Button"
        android:layout_width="307dp"
        android:layout_height="54dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Tutorial_Button"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/menucirclewithbuttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/tutorial_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/dejavuserifcondensedbold"
        android:text="@string/Tutorial"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/menucirclewithbuttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menucirclewithbuttons"
        app:layout_constraintVertical_bias="0.567" />

    <Button
        android:id="@+id/settings_Button"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Settings_Button"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/menucirclewithbuttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menucirclewithbuttons"
        app:layout_constraintVertical_bias="0.474"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/settings_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dejavuserifcondensedbold"
        android:text="@string/Settings"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/menucirclewithbuttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menucirclewithbuttons"
        app:layout_constraintVertical_bias="0.478" />

    <Button
        android:id="@+id/history_Button"
        android:layout_width="302dp"
        android:layout_height="55dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/History_Button"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/menucirclewithbuttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/history_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dejavuserifcondensedbold"
        android:text="@string/History"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/menucirclewithbuttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menucirclewithbuttons"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/training_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dejavuserifcondensedbold"
        android:text="@string/Training"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/menucirclewithbuttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menucirclewithbuttons"
        app:layout_constraintVertical_bias="0.283" />

    <Button
        android:id="@+id/training_Button"
        android:layout_width="280dp"
        android:layout_height="61dp"
        android:background="@android:color/transparent"

        android:contentDescription="@string/Training_Button"

        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/menucirclewithbuttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/play_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dejavuserifcondensedbold"
        android:text="@string/Play"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/menucirclewithbuttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menucirclewithbuttons"
        app:layout_constraintVertical_bias="0.19" />

    <Button
        android:id="@+id/play_Button"
        android:layout_width="240dp"
        android:layout_height="53dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Playing_Button"

        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/menucirclewithbuttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191"
        tools:visibility="invisible" />


</androidx.constraintlayout.widget.ConstraintLayout>