<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whitetile"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    app:layoutDescription="@xml/fragment_login_scene"
    tools:context=".LoginFragment">

    <Button
        android:id="@+id/buttonGoBackFromLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_with_shadows"
        android:text="@string/go_back"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="102dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        tools:ignore="VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="235dp"
        tools:layout_editor_absoluteY="64dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        tools:ignore="VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="288dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/action_sign_in_short"
        tools:layout_editor_absoluteX="241dp"
        tools:layout_editor_absoluteY="149dp" />

    <Button
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/action_sign_up"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="152dp" />

</androidx.constraintlayout.widget.ConstraintLayout>