<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whitetile"
    tools:context=".Fragments.SettingsFragment">

    <Switch
        android:id="@+id/sayOpponentPlayed"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:showText="true"
        android:text="@string/say_opponent_played"
        android:textColor="@color/black"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sayCheck"
        tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />

    <Switch
        android:id="@+id/sayPawn"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:showText="true"
        android:text="@string/saying_pawn_when_moving_pawn"
        android:textColor="@color/black"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />

    <Switch
        android:id="@+id/sayTakes"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:showText="true"
        android:text="@string/saying_takes_when_taking_a_piece"
        android:textColor="@color/black"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sayPawn"
        tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize,TextSizeCheck" />

    <Switch
        android:id="@+id/sayPromotion"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:showText="true"
        android:text=""
        android:textColor="@color/black"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sayTakes"
        tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />

    <Switch
        android:id="@+id/sayCheck"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:showText="true"
        android:text="@string/say_check_when_king_is_in_check"
        android:textColor="@color/black"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sayPromotion"
        tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonGoBackFromSettings"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_with_shadows"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languagesSpinner"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/languagesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/language"
        android:color="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sayOpponentPlayed" />

    <Spinner
        android:id="@+id/languagesSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:entries="@array/languages"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sayOpponentPlayed" />

</androidx.constraintlayout.widget.ConstraintLayout>